--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,20 +2,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mad.trafficclient"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0">
 
-    
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
-    
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-        
-        <activity android:name=".GuideActivity"
+        <activity android:name=".zy_java.acticity.Zy_VideoPlayActivity"></activity>
+        <activity
+            android:name=".GuideActivity"
             android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,16 +24,16 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="landscape"
-            android:label="@string/app_title" />
+            android:label="@string/app_title"
+            android:screenOrientation="landscape" />
         <activity
             android:name=".login.LoginActivity"
-            android:screenOrientation="landscape"
-            android:label="@string/app_title" />
+            android:label="@string/app_title"
+            android:screenOrientation="landscape" />
         <activity
             android:name=".login.RegActivity"
-            android:screenOrientation="landscape"
-            android:label="@string/app_title" />
+            android:label="@string/app_title"
+            android:screenOrientation="landscape" />
     </application>
 
 </manifest>
